remove assets dir. use img to replace.

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "neomx7"
-header-img: "assets/css/images/home/morty.png"
+header-img: "img/morty.png"
 ---
 
 <!-- Language Selector -->
