--- a/offline.html
+++ b/offline.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 description: "似乎网络掉线了。。。"
-header-img: "assets/css/images/home/404.png"
+header-img: "img/404.png"
 permalink: /offline.html
 ---
 
